--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -1,6 +1,6 @@
 OBJECTS = SysGen.com Survey.com \
 	SysCopy.com Assign.com Format.com Talk.com Mode.com RTC.com \
-	Timer.com IntTest.com rtcds7.com rtcds7.com
+	Timer.com IntTest.com RTCds7.com RTChb.com
 OTHERS = *.hex *.com
 SUBDIRS = XM FDU FAT Tune
 DEST = ../../Binary/Apps
