Create I2C directory. Add i2cscan

--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -2,7 +2,7 @@ OBJECTS = SysGen.com Survey.com \
 	SysCopy.com Assign.com Format.com Talk.com Mode.com RTC.com \
 	Timer.com IntTest.com RTCds7.com RTChb.com
 OTHERS = *.hex *.com
-SUBDIRS = XM FDU FAT Tune
+SUBDIRS = XM FDU FAT Tune I2C
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 
