Filename Case Problems
In order to get the Linux/Mac and Windows builds to result in a binary identical result, I have changed the case of some filenames.  Windows and Linux handle directory sorting differently for upper/lower case in filenames.

--- a/Source/Apps/FDU/Makefile
+++ b/Source/Apps/FDU/Makefile
@@ -1,5 +1,5 @@
-OBJECTS = FDU.com
-DOCS = FDU.txt
+OBJECTS = fdu.com
+DOCS = fdu.txt
 DEST = ../../../Binary/Apps
 DOCDEST = ../../../Doc
 TOOLS = ../../../Tools
