--- a/Source/Apps/Tune/Makefile
+++ b/Source/Apps/Tune/Makefile
@@ -1,19 +1,19 @@
-OBJECTS = Tune.com Tunezx.com Tunemsx.com
+OBJECTS = tune.com tunezx.com tunemsx.com
 DEST = ../../../Binary/Apps
 TOOLS = ../../../Tools
 
 include $(TOOLS)/Makefile.inc
 
-DEPS := Tune.asm $(shell find . -name '*.inc')
+DEPS := tune.asm $(shell find . -name '*.inc')
 
-Tune.com: $(DEPS)
-	$(TASM) -dWBW Tune.asm Tune.com Tune.lst
+tune.com: $(DEPS)
+	$(TASM) -dWBW tune.asm tune.com tune.lst
 
-Tunezx.com: $(DEPS)
-	$(TASM) -dZX Tune.asm Tunezx.com Tunezx.lst
+tunezx.com: $(DEPS)
+	$(TASM) -dZX tune.asm tunezx.com tunezx.lst
 
-Tunemsx.com: $(DEPS)
-	$(TASM) -dMSX Tune.asm Tunemsx.com Tunemsx.lst
+tunemsx.com: $(DEPS)
+	$(TASM) -dMSX tune.asm tunemsx.com tunemsx.lst
 
 all::
 	mkdir -p $(DEST)/Tunes
