FLASH4 & Build Fixes
- Upgraded FLASH4 from Will Sowerbutts to v1.3.5
- Miscellaneous build cleanups

--- a/Source/Apps/I2C/Makefile
+++ b/Source/Apps/I2C/Makefile
@@ -1,4 +1,4 @@
-OBJECTS = i2cscan.com, rtcds7.com, i2clcd.com
+OBJECTS = i2cscan.com rtcds7.com i2clcd.com
 DEST = ../../../Binary/Apps
 TOOLS = ../../../Tools
 
