--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -1,6 +1,6 @@
 OBJECTS = sysgen.com survey.com \
 	syscopy.com assign.com format.com talk.com mode.com rtc.com \
-	timer.com inttest.com rtcds7.com rtchb.com ppidetst.com tstdskng.com
+	timer.com inttest.com rtchb.com ppidetst.com tstdskng.com
 OTHERS = *.hex *.com
 SUBDIRS = XM FDU FAT Tune I2C
 DEST = ../../Binary/Apps
