Linux Permissions (cont)
- Added chmod +x  commands for shell scripts (casefn.sh & Build.sh)

--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -65,6 +65,7 @@ N8_std.rom: ROMSIZE=512
 RCZ280_nat_zzr.rom: ROMSIZE=256
 
 %.rom:
+	chmod +x Build.sh
 	bash Build.sh $(DIFFBUILD) $(shell echo $* | sed 's/_/ /') $(ROMSIZE)
 
 hbios_rom.bin:	hbios.asm build.inc
