Add ROM Updater to Boot Loader
- Phil Summers' ROM Updater has been given an official/permanent place in the Boot Loader menu.
- Rearranged the order and sizing of the modules in the third ROM bank to allow space for above.
- Made a few minor updates to the DSKYng support code.

--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -37,7 +37,7 @@ endif
 MOREDIFF = camel80.bin game.bin hbios_rom.bin nascom.bin prefix.bin usrrom.bin \
 	dbgmon.bin hbios_app.bin imgpad2.bin osimg1.bin osimg2.bin romldr.bin \
 	eastaegg.bin hbios_img.bin osimg.bin tastybasic.bin \
-	game.bin usrrom.bin
+	game.bin updater.bin usrrom.bin
 
 SUBDIRS =
 DEST = ../../Binary
@@ -81,6 +81,7 @@ romldr.bin:	build.inc
 dbgmon.bin:	build.inc
 nascom.bin:	build.inc
 eastaegg.bin:	build.inc
+updater.bin:	build.inc
 
 dumps:
 	for i in $(MOREDIFF) ; do \
