--- a/Source/Makefile
+++ b/Source/Makefile
@@ -6,10 +6,10 @@ SUBDIRS += Apps
 SUBDIRS += CBIOS
 SUBDIRS += Forth
 SUBDIRS += Fonts
-SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS
-SUBDIRS += HBIOS CPM3
-SUBDIRS += ZPM3
+SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS CPM3 ZPM3
 #SUBDIRS += BPBIOS
+SUBDIRS += RomDsk
+SUBDIRS += HBIOS
 SUBDIRS += Images
 SUBDIRS += ZRC
 SUBDIRS += ZZR
