--- a/Binary/Makefile
+++ b/Binary/Makefile
@@ -5,4 +5,4 @@ SUBDIRS = Apps CPM3 ZPM3
 include $(TOOLS)/Makefile.inc
 
 clobber::
-	@rm -f *.bin *.com *.img *.rom *.hex *.pdf *.log *.eeprom *.dat
+	@rm -f *.bin *.com *.img *.rom *.upd *.hex *.pdf *.log *.eeprom *.dat
