--- a/Tools/Makefile.inc
+++ b/Tools/Makefile.inc
@@ -126,13 +126,13 @@ all:: $(OBJECTS)
 	@for dir in $(SUBDIRS) ; do \
 		$(MAKE) --directory $$dir all ; \
 	done
-	@if [ "$(DEST)" ] ; then for file in $(filter-out $(NOCOPY),$(OBJECTS)) ; do \
+	@if [ "$(DEST)" ] && [ "$(OBJECTS)" ] ; then for file in $(filter-out $(NOCOPY),$(OBJECTS)) ; do \
 		mkdir -p $(DEST) ; \
 		echo Copying $$file to $(DEST) ; \
 		rm -f /tmp/casefn.cache ; \
 		cp $$($(CASEFN) $$file) $(DEST) ; \
 	done ; fi
-	@if [ "$(DOCDEST)" ] ; then for file in $(DOCS) ; do \
+	@if [ "$(DOCDEST)" ] && [ "$(DOCS)" ] ; then for file in $(DOCS) ; do \
 		mkdir -p $(DOCDEST) ; \
 		echo Copying $$file to $(DOCDEST) ; \
 		rm -f /tmp/casefn.cache ; \
