--- a/.gitignore
+++ b/.gitignore
@@ -81,9 +81,8 @@ Tools/unix/zx/zx
 !Source/BPBIOS/Z34RCP11/cledinst.com
 !Source/BPBIOS/Z34RCP11/cledsave.com
 !Source/Fonts
-!Source/Images/**/*.[Cc][Oo][Mm]
-!Source/Images/hdnew_prefix.bin
-!Source/RomDsk/**/*.[Cc][Oo][Mm]
+!Source/Images/**
+!Source/RomDsk/**
 !Source/UBIOS/FSFAT.BIN
 !Source/UBIOS/UNA-BIOS.BIN
 !Source/ZCCP/*.[Cc][Oo][Mm]
