ZMP LInux/MacOS Build
- Added new ZMP application to Linux/MacOS Build
- More ZX cleanup

--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -2,7 +2,7 @@ OBJECTS = sysgen.com survey.com \
 	syscopy.com assign.com format.com talk.com mode.com rtc.com \
 	timer.com inttest.com rtchb.com ppidetst.com tstdskng.com
 OTHERS = *.hex *.com
-SUBDIRS = XM FDU FAT Tune I2C ramtest
+SUBDIRS = XM FDU FAT Tune I2C ramtest ZMP
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 
