HDIAG Early Development
- Initial framework.  Just boots up and displays startup messages.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -1,7 +1,8 @@
 #
 # order is actually important, because of build dependencies
 #
-SUBDIRS = Prop
+SUBDIRS = HDIAG
+SUBDIRS += Prop
 SUBDIRS += Apps
 SUBDIRS += CBIOS
 SUBDIRS += Forth
