HDIAG work in progress
- HDIAG updates
- Regen documentation updates from Phil
- Fix ZZR config

--- a/Source/HDIAG/Makefile
+++ b/Source/HDIAG/Makefile
@@ -6,15 +6,8 @@ include $(TOOLS)/Makefile.inc
 TASMFLAGS=-t hd64180
 
 hdiag.com: hdiag.asm
-	$(TASM) $(TASMFLAGS) -dAPPBOOT $< $@ $*.lst
+	$(TASM) $(TASMFLAGS) -dAPPBOOT $< $@ hdiag.com.lst
 
 
 hdiag.rom: hdiag.asm
-	$(TASM) $(TASMFLAGS) -dROMBOOT $< $@ $*.lst
-
-#cbios_wbw.bin: cbios.asm 
-#	$(TASM) -dPLTWBW $< $@ cbios_wbw.lst
-#
-#cbios_una.bin: cbios.asm
-#	$(TASM) -dPLTUNA $< $@ cbios_una.lst
-
+	$(TASM) $(TASMFLAGS) -dROMBOOT $< $@ hdiag.rom.lst
