--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -1,8 +1,7 @@
 OBJECTS = sysgen.com survey.com \
 	syscopy.com assign.com format.com talk.com mode.com rtc.com \
-	timer.com inttest.com rtchb.com ppidetst.com tstdskng.com
-OTHERS = *.hex *.com
-SUBDIRS = XM FDU FAT Tune I2C ramtest ZMP
+	timer.com rtchb.com
+SUBDIRS = XM FDU FAT Tune I2C TEST ZMP
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 
