Test Apps Linux Build
- Complete the reorganization of the test apps by implementing Makefile changes.

--- a/Binary/Apps/Makefile
+++ b/Binary/Apps/Makefile
@@ -1,5 +1,6 @@
 TOOLS = ../../Tools
-MOREDIFF := $(shell $(TOOLS)/unix/casefn.sh *.com Tunes/*)
+MOREDIFF := $(shell $(TOOLS)/unix/casefn.sh *.com)
+SUBDIRS = Test
 
 include $(TOOLS)/Makefile.inc
 
