--- a/Source/Apps/Test/I2C/Makefile
+++ b/Source/Apps/Test/I2C/Makefile
@@ -1,6 +1,6 @@
 OBJECTS = i2cscan.com rtcds7.com i2clcd.com
-DEST = ../../../Binary/Apps
-TOOLS = ../../../Tools
+DEST = ../../../../Binary/Apps/Test/
+TOOLS = ../../../../Tools
 
 USETASM=1
 TASMFLAGS=-dWBW
