--- a/Source/Apps/Test/ramtest/Makefile
+++ b/Source/Apps/Test/ramtest/Makefile
@@ -1,7 +1,7 @@
 OBJECTS = ramtest.com
-DEST = ../../../Binary/Apps
-DOCDEST = ../../../Doc
-TOOLS = ../../../Tools
+DEST = ../../../../Binary/Apps/Test
+DOCDEST = ../../../../Doc
+TOOLS = ../../../../Tools
 OTHERS = loader.bin dbgmon.bin
 include $(TOOLS)/Makefile.inc
 
