--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -1,7 +1,8 @@
 OBJECTS = sysgen.com survey.com \
 	syscopy.com assign.com format.com talk.com mode.com rtc.com \
 	timer.com rtchb.com
-SUBDIRS = XM FDU FAT Tune Test ZMP ZMD
+#SUBDIRS = XM FDU FAT Tune Test ZMP ZMD
+SUBDIRS = XM FDU FAT Tune Test ZMP
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 
