--- a/Source/Apps/ZMD/Makefile
+++ b/Source/Apps/ZMD/Makefile
@@ -7,4 +7,4 @@ include $(TOOLS)/Makefile.inc
 
 zmd.com: zmd.rel zmdhb.hex
 	$(ZXCC) $(CPM)/L80 -zmd,zmd/n/e
-	$(ZXCC) $(CPM)/MLOAD25 zmd=zmd.com,zmdhb
+	$(ZXCC) $(CPM)/MLOAD25 -zmd=zmd.com,zmdhb
