--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ Tools/unix/zx/zx
 !Source/ver.lib
 !Source/Apps/FAT/FAT.COM
 !Source/Apps/ZMP/zmpx.com
+!Source/Apps/ZMD/zmdsubs.rel
 !Source/BPBIOS/bpbuild.com
 !Source/BPBIOS/movp112.com
 !Source/BPBIOS/*.lib
