--- a/Source/Makefile
+++ b/Source/Makefile
@@ -6,6 +6,7 @@ SUBDIRS += Prop
 SUBDIRS += Apps
 SUBDIRS += CBIOS
 SUBDIRS += Forth
+SUBDIRS += TastyBasic
 SUBDIRS += Fonts
 SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS CPM3 ZPM3
 #SUBDIRS += BPBIOS
