--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: rlespinasse/github-slug-action@v3.x
         
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Build
         run: |
@@ -58,6 +60,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Build
         run: |
