--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Source/TastyBasic"]
 	path = Source/TastyBasic
-	url = git@github.com:dimitrit/tastybasic.git
+	url = https://github.com/dimitrit/tastybasic.git
