--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Checkout submodules
+        run: | 
+          git submodule update --init --recursive
       
       - name: Create Package Label
         run: |
