--- a/Source/Apps/Dev/Makefile
+++ b/Source/Apps/Dev/Makefile
@@ -1,5 +1,5 @@
 OBJECTS = dev.com
-DOCS = dev.txt
+#DOCS = dev.txt
 DEST = ../../../Binary/Apps
 DOCDEST = ../../../Binary/Apps
 TOOLS = ../../../Tools
