TastyBasic Build Adjustments
- Minor changes to the build process in TastyBasic to ensure binary identical results across all platforms.

--- a/Source/TastyBasic/src/Makefile
+++ b/Source/TastyBasic/src/Makefile
@@ -1,5 +1,5 @@
 UNAME := $(shell uname)
-VER := $(shell git describe --tags --abbrev=0)
+# VER := $(shell git describe --tags --abbrev=0)
 APPDIR := $(wildcard ../../../Binary/Apps)
 BINDIR := ../../../Tools/$(UNAME)
 
@@ -14,17 +14,21 @@ export PATH := $(BINDIR):${PATH}
 
 all: $(ROMIMAGE) $(CPMCMD) | $(APPDIR)
 
-clean clobber:
-	@rm -f *.lst *.img *.com *.bin $(CPMAPP)
+clean:
+	@rm -f *.lst *.img *.com *.bin
+
+clobber: clean
+	@rm -f $(CPMAPP)
+
 $(ROMIMAGE): $(ROMDEPS)
-	@uz80as -dROMWBW -d"VERSION \"$(VER)\"" tastybasic.asm tastybasic.bin tastybasic.bin.lst
+	@uz80as -dROMWBW tastybasic.asm tastybasic.bin tastybasic.bin.lst
 
 $(CPMIMAGE): $(CPMCMD)
 	@mkfs.cpm -f wbw_fd144 tastybasic.img
 	@cpmcp -f wbw_fd144 tastybasic.img tastybasic.com 0:tbasic.com
 
 $(CPMCMD): $(CPMDEPS)
-	@uz80as -dCPM -d"VERSION \"$(VER)\"" tastybasic.asm tastybasic.com tastybasic.com.lst
+	@uz80as -dCPM tastybasic.asm tastybasic.com tastybasic.com.lst
 
 $(APPDIR): $(CPMCMD)
 	@cat $(CPMCMD) > $(CPMAPP)
