--- a/Source/TastyBasic/Makefile
+++ b/Source/TastyBasic/Makefile
@@ -1,9 +1,3 @@
-SUBDIRS := src
-TARGETS := all clobber clean
-
-$(TARGETS): $(SUBDIRS)
-
-$(SUBDIRS):
-	$(MAKE) -C $@ $(MAKECMDGOALS)
-
-.PHONY: $(TARGETS) $(SUBDIRS)
+SUBDIRS = src
+TOOLS = ../../Tools
+include $(TOOLS)/Makefile.inc
