Include TastyBasic version details

--- a/Source/TastyBasic/src/Makefile
+++ b/Source/TastyBasic/src/Makefile
@@ -1,5 +1,6 @@
+# git@github.com:dimitrit/tastybasic.git; commit a86d7e7; (HEAD -> master, tag: v0.3.0) 
+VER := \"v0.3.0\" 
 UNAME := $(shell uname)
-# VER := $(shell git describe --tags --abbrev=0)
 APPDIR := $(wildcard ../../../Binary/Apps)
 BINDIR := ../../../Tools/$(UNAME)
 
@@ -21,14 +22,14 @@ clobber: clean
 	@rm -f $(CPMAPP)
 
 $(ROMIMAGE): $(ROMDEPS)
-	@uz80as -dROMWBW tastybasic.asm tastybasic.bin tastybasic.bin.lst
+	@uz80as -dROMWBW -d"VERSION $(VER)" tastybasic.asm tastybasic.bin tastybasic.bin.lst
 
 $(CPMIMAGE): $(CPMCMD)
 	@mkfs.cpm -f wbw_fd144 tastybasic.img
 	@cpmcp -f wbw_fd144 tastybasic.img tastybasic.com 0:tbasic.com
 
 $(CPMCMD): $(CPMDEPS)
-	@uz80as -dCPM tastybasic.asm tastybasic.com tastybasic.com.lst
+	@uz80as -dCPM -d"VERSION $(VER)" tastybasic.asm tastybasic.com tastybasic.com.lst
 
 $(APPDIR): $(CPMCMD)
 	@cat $(CPMCMD) > $(CPMAPP)
