Clean removes rom images

--- a/Binary/Makefile
+++ b/Binary/Makefile
@@ -4,5 +4,10 @@ SUBDIRS = Apps CPM3 ZPM3
 
 include $(TOOLS)/Makefile.inc
 
-clobber::
-	@rm -f *.bin *.com *.img *.rom *.upd *.hex *.pdf *.log *.eeprom *.dat
+clean::
+	@rm -f *.bin *.com *.img *.rom
+
+clobber:: clean
+	@rm -f *.upd *.hex *.pdf *.log *.eeprom *.dat
+
+.PHONEY: clean clobber
