--- a/Binary/Makefile
+++ b/Binary/Makefile
@@ -4,10 +4,5 @@ SUBDIRS = Apps CPM3 ZPM3
 
 include $(TOOLS)/Makefile.inc
 
-clean::
-	@rm -f *.bin *.com *.img *.rom *.upd
-
-clobber:: clean
-	@rm -f *.hex *.pdf *.log *.eeprom *.dat
-
-.PHONEY: clean clobber
+clobber::
+	@rm -f *.bin *.com *.img *.rom *.upd *.hex *.pdf *.log *.eeprom *.dat
